agrgando estilos y nuevos cosas que me gustan

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis gustos</title>
+    <style>  
+        Body{
+Display: flex;
+Justify-content: CENTER;
+Align-items: center;
+min-height: 100VH;
+BACKGROUND-COLOR: #212121;
+COLOR: #Ededed;
+Font-family: sans-serif;
+Font-size: 4em;
+}
+    </style>
 </head>
 <body>
     <h1> A mi me gusta ver peliculas</h1>
     <h1> A mi me gusta jugar a video juegos en linea </h1>
+    <h1> Salir a pasear </h1>
+    <h1> Ir a comer a restaurantes </h1>
 </body>
 </html>
