modificando el tamaño de las letras

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ min-height: 100VH;
 BACKGROUND-COLOR: #212121;
 COLOR: #Ededed;
 Font-family: sans-serif;
-Font-size: 4em;
+Font-size: 20px;
 }
     </style>
 </head>
