--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@ COLOR: #Ededed;
 Font-family: sans-serif;
 Font-size: 20px;
 }
+        h1{
+            width: 100%;
+        }
     </style>
 </head>
 <body>
