Realizando mejoras para Demo Luis Chavez

--- a/index.html
+++ b/index.html
@@ -3,27 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mis gustos</title>
-    <style>  
-        Body{
-Display: flex;
-Justify-content: CENTER;
-Align-items: center;
-min-height: 100VH;
-BACKGROUND-COLOR: #212121;
-COLOR: #Ededed;
-Font-family: sans-serif;
-Font-size: 20px;
-}
-        h1{
-            width: 100%;
-        }
-    </style>
+    <title>Mis gustos personales</title>
+  <style>
+    *{
+      margin: 0px;
+      padding: 0px;
+      box-sizing: border-box;
+    }
+    body{
+      background: #212121;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: sans-serif;
+    }
+    div{
+      width: 500px;
+      padding: 25px;
+      background: #16404D;
+      color: white;
+      border-radius: 10px;
+    }
+    div h1{
+      margin-bottom: 15px;
+    }
+  </style>
 </head>
 <body>
-    <h1> A mi me gusta ver peliculas</h1>
-    <h1> A mi me gusta jugar a video juegos en linea </h1>
-    <h1> Salir a pasear </h1>
-    <h1> Ir a comer a restaurantes </h1>
+  <div>
+    <h1>Algunos de mis gustos son:</h1>
+    <ul>
+      <li>Jugar video juegos en línea</li>
+      <li>Ver peliculas</li>
+      <li>Salir a pasear</li>
+      <li>Ir a restaurantes a comer</li>
+    </ul>
+  </div>
 </body>
 </html>
