--- a/index.html
+++ b/index.html
@@ -4,26 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis gustos</title>
-    <style>  
-        Body{
-Display: flex;
-Justify-content: CENTER;
-Align-items: center;
-min-height: 100VH;
-BACKGROUND-COLOR: #212121;
-COLOR: #Ededed;
-Font-family: sans-serif;
-Font-size: 20px;
-}
-        h1{
-            width: 100%;
-        }
+    <style>
+
     </style>
 </head>
 <body>
-    <h1> A mi me gusta ver peliculas</h1>
-    <h1> A mi me gusta jugar a video juegos en linea </h1>
-    <h1> Salir a pasear </h1>
-    <h1> Ir a comer a restaurantes </h1>
+    <header>   
+        <h1>Pasatiempos</h1>
+        <nav>
+            <a href="peliculas.html"> Peliculas </a>
+        </nav>
+        <nav> 
+            <a href="videojuegos.html"> Videojuegos</a>
+        </nav>
+        <nav>
+            <a href="lugaresturisticos.html">Lugares Turisticos</a>
+        </nav>
+        <nav>
+            <a href="comida">restaurantes</a>
+        </nav>
+        <nav>
+            <a href="musica"> Musica o artistas favoritos</a>
+        </nav>
+    </header>
+<main>  
+    <h2> sobre mi </h2>
+    <p> Esta pagina representaria parte de mis gustos o pasatiempo en lo que hago en algunos dias </p>
+</main>
+<aside> 
+
+</aside>
+
+<footer>
+    <address>
+        <p> sitio creado: LACG</p>
+    </address>
+    <hr> 
+</footer>
 </body>
 </html>
